--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,13 +5,34 @@
 
 <div class="wrapper">
   <header class="header">
-    header
+    <h1 class="logo"><img src="{{ URL }}/assets/img/logo.png" alt="203Labs"></h1>
+    <nav class="main-menu">
+      <ul>
+        <li><a href="#">who we are</a></li>
+        <li><a href="#">what we do</a></li>
+        <li><a href="#">work</a></li>
+        <li><a href="#">contact</a></li>
+      </ul>
+    </nav>
   </header>
   <main class="container">
-    container
+    <section class="section section-01">
+      <h2 class="title">Better<br>User Experience with Technology</h2>
+      <p class="text">203labs은 다양한 아이디어와 열정을 가진 사람들이 모여서 만든 소규모 lab입니다 <br>우리는 기술로써 더 나은 사용자 경험을 제공하고 있습니다</p class="text">
+      <p class="text">여러분의 상상속에 있는 아이디어를 <br>203labs와 함께 현실화 해보시는 건 어떠신가요?</p>
+      <div class="img"><img src="{{ URL }}/assets/img/img-section01.jpg" alt=""></div>
+    </section>
+    <section class="section section-02"></section>
+    <section class="section section-03"></section>
+    <section class="section section-04">
+      <h2 class="title">Who will enjoy <br>the project with us?</h2>
+      <p class="text">우리와 함께 <br>즐겁게 프로젝트를 하실 분</p>
+      <a href="#" class="mail">jun@203labs.com</a>
+    </section>
   </main>
   <footer class="footer">
-    footer
+    <img src="{{ URL }}/assets/img/logo.png" alt="">
+    <address>Digital Media Studio, 203labs</address>
   </footer>
 </div>
 
