--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,7 +18,7 @@
   <main class="container">
     <section class="section section-01">
       <h2 class="title">Better<br>User Experience with Technology</h2>
-      <p class="text">203labs은 다양한 아이디어와 열정을 가진 사람들이 모여서 만든 소규모 lab입니다 <br>우리는 기술로써 더 나은 사용자 경험을 제공하고 있습니다</p class="text">
+      <p class="text">203labs은 다양한 아이디어와 열정을 가진 사람들이 모여서 만든 소규모 lab입니다 <br>우리는 기술로써 더 나은 사용자 경험을 제공하고 있습니다</p>
       <p class="text">여러분의 상상속에 있는 아이디어를 <br>203labs와 함께 현실화 해보시는 건 어떠신가요?</p>
       <div class="img"><img src="{{ URL }}/assets/img/img-section01.jpg" alt=""></div>
     </section>
