--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,9 +3,11 @@
   "styles": []
 }) }}
 
-<div class="wrapper">
+<ul class="wrapper">
   <header class="header">
-    <h1 class="logo"><img src="{{ URL }}/assets/img/logo.png" alt="203Labs"></h1>
+    <h1 class="logo">
+      <a href="#"><img src="{{ URL }}/assets/img/logo.png" alt="203Labs"></a>
+    </h1>
     <nav class="main-menu">
       <ul>
         <li><a href="#">who we are</a></li>
@@ -16,18 +18,108 @@
     </nav>
   </header>
   <main class="container">
+
     <section class="section section-01">
       <h2 class="title">Better<br>User Experience with Technology</h2>
       <p class="text">203labs은 다양한 아이디어와 열정을 가진 사람들이 모여서 만든 소규모 lab입니다 <br>우리는 기술로써 더 나은 사용자 경험을 제공하고 있습니다</p>
       <p class="text">여러분의 상상속에 있는 아이디어를 <br>203labs와 함께 현실화 해보시는 건 어떠신가요?</p>
       <div class="img"><img src="{{ URL }}/assets/img/img-section01.jpg" alt=""></div>
     </section>
-    <section class="section section-02"></section>
-    <section class="section section-03"></section>
+
+    <section class="section section-02">
+      <h2 class="title">What we do</h2>
+      <div class="business">
+        <div class="business-group">
+          <h3 class="business-title">Strategy & Consulting</h3>
+          <ul class="business-list">
+            <li><a href="#">비즈니스 컨설팅</a></li>
+            <li><a href="#">콘텐츠 전략</a></li>
+            <li><a href="#">UI/UX 설계</a></li>
+          </ul>
+          <div class="business-img"><img src="{{ URL }}/assets/img/ic-business01.svg" alt=""></div>
+        </div>
+        <div class="business-group">
+          <h3 class="business-title">Digital Experience</h3>
+          <ul class="business-list">
+            <li><a href="#">비즈니스 컨설팅</a></li>
+            <li><a href="#">콘텐츠 전략</a></li>
+            <li><a href="#">UI/UX 설계</a></li>
+          </ul>
+          <div class="business-img"><img src="{{ URL }}/assets/img/ic-business02.svg" alt=""></div>
+        </div>
+        <div class="business-group">
+          <h3 class="business-title">Engineering</h3>
+          <ul class="business-list">
+            <li><a href="#">설계</a></li>
+            <li><a href="#">어플리케이션 개발</a></li>
+            <li><a href="#">프로토타이핑</a></li>
+          </ul>
+          <div class="business-img"><img src="{{ URL }}/assets/img/ic-business03.svg" alt=""></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section-03">
+      <h2 class="title">Work</h2>
+      <nav class="category">
+        <a href="#">All</a>
+        <a href="#">Strategy</a>
+        <a href="#">Consulting</a>
+        <a href="#">Digital Experience</a>
+        <a href="#">Engineering</a>
+      </nav>
+      <div class="masonry">
+        <ul class="masonry-list">
+          <li class="masonry-list-item">
+            <div class="card">
+              <div class="card-img">
+                <span class="card-img-label">Strategy</span>
+                <img src="{{ URL }}/assets/img/@sample1.jpg" alt="">
+              </div>
+              <strong class="card-title">우리의 하루</strong>
+              <span class="card-text">Kids o2o Activity Platform</span>
+              <span class="card-state">Application development</span>
+            </div>
+          </li>
+          <li class="masonry-list-item">
+            <div class="card">
+              <div class="card-img">
+                <span class="card-img-label">Digital Experience</span>
+              </div>
+              <strong class="card-title">연금관리 어플리케이션</strong>
+              <span class="card-text">Pension Management Application</span>
+              <span class="card-state">in Progress</span>
+            </div>
+          </li>
+          <li class="masonry-list-item">
+            <div class="card">
+              <div class="card-img">
+                <span class="card-img-label">Strategy</span>
+              </div>
+              <strong class="card-title">세번째 프로젝트</strong>
+              <span class="card-text">Comming Soon</span>
+              <span class="card-state">in Progress</span>
+            </div>
+          </li>
+          <li class="masonry-list-item">
+            <div class="card">
+              <div class="card-img">
+                <span class="card-img-label">Digital Experience</span>
+              </div>
+              <strong class="card-title">네번째 프로젝트</strong>
+              <span class="card-text">Comming Soon</span>
+              <span class="card-state">in Progress</span>
+            </div>
+          </li>
+        </ul>
+        <button type="button" class="masonry-more">More <i class="xi-long-arrow-right"></i></button>
+      </div>
+    </section>
+
     <section class="section section-04">
       <h2 class="title">Who will enjoy <br>the project with us?</h2>
       <p class="text">우리와 함께 <br>즐겁게 프로젝트를 하실 분</p>
-      <a href="#" class="mail">jun@203labs.com</a>
+      <a href="#" class="mail">jun@203labs.com <i class="xi-long-arrow-right"></i></a>
     </section>
   </main>
   <footer class="footer">
