fix: HTML 문법 오류 수정

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@
   "styles": []
 }) }}
 
-<ul class="wrapper">
+<div class="wrapper">
   <header class="header">
     <h1 class="logo">
       <a href="#"><img src="{{ URL }}/assets/img/logo.png" alt="203Labs"></a>
