add: 인터렉션 업데이트

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,57 +20,60 @@
   <main class="container">
 
     <section class="section section-01">
-      <h2 class="title">Better<br>User Experience with Technology</h2>
-      <p class="text">203labs은 다양한 아이디어와 열정을 가진 사람들이 모여서 만든 소규모 lab입니다 <br>우리는 기술로써 더 나은 사용자 경험을 제공하고 있습니다</p>
-      <p class="text">여러분의 상상속에 있는 아이디어를 <br>203labs와 함께 현실화 해보시는 건 어떠신가요?</p>
-      <div class="img"><img src="{{ URL }}/assets/img/img-section01.jpg" alt=""></div>
+      <h2 class="title">
+        <span data-aos="shift-up">Better</span>
+        <span data-aos="shift-up" data-aos-delay="100">User Experience with Technology</span>
+      </h2>
+      <p class="text" data-aos="shift-up" data-aos-delay="200">203labs은 다양한 아이디어와 열정을 가진 사람들이 모여서 만든 소규모 lab입니다 <br>우리는 기술로써 더 나은 사용자 경험을 제공하고 있습니다</p>
+      <p class="text" data-aos="shift-up" data-aos-delay="300">여러분의 상상속에 있는 아이디어를 <br>203labs와 함께 현실화 해보시는 건 어떠신가요?</p>
+      <div class="img" data-aos="shift-up" data-aos-delay="100"><img src="{{ URL }}/assets/img/img-section01.jpg" alt=""></div>
     </section>
 
     <section class="section section-02">
-      <h2 class="title">What we do</h2>
+      <h2 class="title" data-aos="shift-up">What we do</h2>
       <div class="business">
         <div class="business-group">
-          <h3 class="business-title">Strategy & Consulting</h3>
+          <h3 class="business-title" data-aos="shift-up">Strategy & Consulting</h3>
           <ul class="business-list">
-            <li><a href="#">비즈니스 컨설팅</a></li>
-            <li><a href="#">콘텐츠 전략</a></li>
-            <li><a href="#">UI/UX 설계</a></li>
+            <li data-aos="shift-up" data-aos-delay="0"><a href="#">비즈니스 컨설팅</a></li>
+            <li data-aos="shift-up" data-aos-delay="100"><a href="#">콘텐츠 전략</a></li>
+            <li data-aos="shift-up" data-aos-delay="200"><a href="#">UI/UX 설계</a></li>
           </ul>
-          <div class="business-img"><img src="{{ URL }}/assets/img/ic-business01.svg" alt=""></div>
+          <div class="business-img" data-aos="shift-up"><img src="{{ URL }}/assets/img/ic-business01.svg" alt=""></div>
         </div>
         <div class="business-group">
-          <h3 class="business-title">Digital Experience</h3>
+          <h3 class="business-title" data-aos="shift-up">Digital Experience</h3>
           <ul class="business-list">
-            <li><a href="#">비즈니스 컨설팅</a></li>
-            <li><a href="#">콘텐츠 전략</a></li>
-            <li><a href="#">UI/UX 설계</a></li>
+            <li data-aos="shift-up" data-aos-delay="0"><a href="#">비즈니스 컨설팅</a></li>
+            <li data-aos="shift-up" data-aos-delay="100"><a href="#">콘텐츠 전략</a></li>
+            <li data-aos="shift-up" data-aos-delay="200"><a href="#">UI/UX 설계</a></li>
           </ul>
-          <div class="business-img"><img src="{{ URL }}/assets/img/ic-business02.svg" alt=""></div>
+          <div class="business-img" data-aos="shift-up"><img src="{{ URL }}/assets/img/ic-business02.svg" alt=""></div>
         </div>
         <div class="business-group">
-          <h3 class="business-title">Engineering</h3>
+          <h3 class="business-title" data-aos="shift-up">Engineering</h3>
           <ul class="business-list">
-            <li><a href="#">설계</a></li>
-            <li><a href="#">어플리케이션 개발</a></li>
-            <li><a href="#">프로토타이핑</a></li>
+            <li data-aos="shift-up" data-aos-delay="0"><a href="#">설계</a></li>
+            <li data-aos="shift-up" data-aos-delay="100"><a href="#">어플리케이션 개발</a></li>
+            <li data-aos="shift-up" data-aos-delay="200"><a href="#">프로토타이핑</a></li>
           </ul>
-          <div class="business-img"><img src="{{ URL }}/assets/img/ic-business03.svg" alt=""></div>
+          <div class="business-img" data-aos="shift-up"><img src="{{ URL }}/assets/img/ic-business03.svg" alt=""></div>
         </div>
       </div>
     </section>
 
     <section class="section section-03">
-      <h2 class="title">Work</h2>
+      <h2 class="title" data-aos="shift-up">Work</h2>
       <nav class="category">
-        <a href="#">All</a>
-        <a href="#">Strategy</a>
-        <a href="#">Consulting</a>
-        <a href="#">Digital Experience</a>
-        <a href="#">Engineering</a>
+        <a href="#" data-aos="shift-up" data-aos-delay="0">All</a>
+        <a href="#" data-aos="shift-up" data-aos-delay="100">Strategy</a>
+        <a href="#" data-aos="shift-up" data-aos-delay="200">Consulting</a>
+        <a href="#" data-aos="shift-up" data-aos-delay="300">Digital Experience</a>
+        <a href="#" data-aos="shift-up" data-aos-delay="400">Engineering</a>
       </nav>
       <div class="masonry">
         <ul class="masonry-list">
-          <li class="masonry-list-item">
+          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000">
             <div class="card">
               <div class="card-img">
                 <span class="card-img-label">Strategy</span>
@@ -81,7 +84,7 @@
               <span class="card-state">Application development</span>
             </div>
           </li>
-          <li class="masonry-list-item">
+          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000">
             <div class="card">
               <div class="card-img">
                 <span class="card-img-label">Digital Experience</span>
@@ -91,7 +94,7 @@
               <span class="card-state">in Progress</span>
             </div>
           </li>
-          <li class="masonry-list-item">
+          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000">
             <div class="card">
               <div class="card-img">
                 <span class="card-img-label">Strategy</span>
@@ -101,7 +104,7 @@
               <span class="card-state">in Progress</span>
             </div>
           </li>
-          <li class="masonry-list-item">
+          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000">
             <div class="card">
               <div class="card-img">
                 <span class="card-img-label">Digital Experience</span>
@@ -117,8 +120,11 @@
     </section>
 
     <section class="section section-04">
-      <h2 class="title">Who will enjoy <br>the project with us?</h2>
-      <p class="text">우리와 함께 <br>즐겁게 프로젝트를 하실 분</p>
+      <h2 class="title">
+        <span data-aos="shift-up">Who will enjoy</span>
+        <span data-aos="shift-up" data-aos-delay="100">the project with us?</span>
+      </h2>
+      <p class="text" data-aos="shift-up" data-aos-delay="200">우리와 함께 <br>즐겁게 프로젝트를 하실 분</p>
       <a href="#" class="mail">jun@203labs.com <i class="xi-long-arrow-right"></i></a>
     </section>
   </main>
