모바일 디테일

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,6 +16,22 @@
         <li><a href="#">contact</a></li>
       </ul>
     </nav>
+    <!-- mobile -->
+    <nav class="main-menu is-mobile">
+      <strong class="logo"><img src="{{ URL }}/assets/img/logo_white.png" alt="203Labs"></strong>
+      <ul>
+        <li><a href="#">203labs</a></li>
+        <!-- <li><a href="#">Who we are</a></li> -->
+        <li><a href="#">What we do</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="text">
+        <p>Better User Experience<br>with Technology</p>
+        <p>203labs</p>
+      </div>
+    </nav>
+    <!-- //mobile -->
     <button type="button" class="btn-hamburger"><span class="blind">메뉴</span></button>
   </header>
   <main class="container">
