improve: 모바일 기능 개선

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,26 +5,25 @@
 
 <div class="wrapper">
   <header class="header">
-    <h1 class="logo">
+    <h1 class="logo" data-aos="fade-right">
       <a href="#"><img src="{{ URL }}/assets/img/logo.png" alt="203Labs"></a>
     </h1>
-    <nav class="main-menu">
+    <nav class="main-menu" data-aos="fade-left">
       <ul>
-        <li><a href="#">who we are</a></li>
-        <li><a href="#">what we do</a></li>
-        <li><a href="#">work</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="#section-01" class="js-scroll" data-offset="-50">who we are</a></li>
+        <li><a href="#section-02" class="js-scroll" data-offset="-50">what we do</a></li>
+        <li><a href="#section-03" class="js-scroll" data-offset="-50">work</a></li>
+        <li><a href="#section-04" class="js-scroll" data-offset="-50">contact</a></li>
       </ul>
     </nav>
     <!-- mobile -->
     <nav class="main-menu is-mobile">
       <strong class="logo"><img src="{{ URL }}/assets/img/logo_white.png" alt="203Labs"></strong>
       <ul>
-        <li><a href="#">203labs</a></li>
-        <!-- <li><a href="#">Who we are</a></li> -->
-        <li><a href="#">What we do</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#section-01" class="js-scroll" data-offset="-30">203labs</a></li>
+        <li><a href="#section-02" class="js-scroll" data-offset="-30">What we do</a></li>
+        <li><a href="#section-03" class="js-scroll" data-offset="-30">Work</a></li>
+        <li><a href="#section-04" class="js-scroll" data-offset="-30">Contact</a></li>
       </ul>
       <div class="text">
         <p>Better User Experience<br>with Technology</p>
@@ -36,7 +35,7 @@
   </header>
   <main class="container">
 
-    <section class="section section-01">
+    <section id="section-01" class="section section-01">
       <h2 class="title">
         <span data-aos="shift-up">Better</span>
         <span data-aos="shift-up" data-aos-delay="100">User Experience with Technology</span>
@@ -46,7 +45,7 @@
       <div class="img" data-aos="shift-up" data-aos-delay="100"><img src="{{ URL }}/assets/img/img-section01.jpg" alt=""></div>
     </section>
 
-    <section class="section section-02">
+    <section id="section-02" class="section section-02">
       <h2 class="title" data-aos="shift-up">What we do</h2>
       <div class="business">
         <div class="business-group">
@@ -79,7 +78,7 @@
       </div>
     </section>
 
-    <section class="section section-03">
+    <section id="section-03" class="section section-03">
       <h2 class="title" data-aos="shift-up">Work</h2>
       <nav class="category">
         <a href="#" data-aos="shift-up" data-aos-delay="0">All</a>
@@ -132,22 +131,22 @@
             </div>
           </li>
         </ul>
-        <button type="button" class="masonry-more">More <i class="xi-long-arrow-right"></i></button>
+        <button type="button" class="masonry-more" data-aos="zoom-in">More <i class="xi-long-arrow-right"></i></button>
       </div>
     </section>
 
-    <section class="section section-04">
+    <section id="section-04" class="section section-04">
       <h2 class="title">
         <span data-aos="shift-up">Who will enjoy</span>
         <span data-aos="shift-up" data-aos-delay="100">the project with us?</span>
       </h2>
       <p class="text" data-aos="shift-up" data-aos-delay="200">우리와 함께 <br>즐겁게 프로젝트를 하실 분</p>
-      <a href="#" class="mail">jun@203labs.com <i class="xi-long-arrow-right"></i></a>
+      <a href="#" class="mail" data-aos="zoom-in">jun@203labs.com <i class="xi-long-arrow-right"></i></a>
     </section>
   </main>
   <footer class="footer">
-    <img src="{{ URL }}/assets/img/logo.png" alt="">
-    <address>Digital Media Studio, 203labs</address>
+    <img src="{{ URL }}/assets/img/logo.png" alt="203Labs" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
+    <address data-aos="fade-left" data-aos-anchor-placement="top-bottom">Digital Media Studio, 203labs</address>
   </footer>
 </div>
 
