--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -93,8 +93,8 @@
       <!-- item container  -->
       <div class="masonry">
         <ul class="masonry-list">
-          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000" data-groups='["strategy"]'>
-            <div class="card">
+          <li class="masonry-list-item" data-groups='["strategy"]'>
+            <div class="card" data-aos="scale-up">
               <div class="card-img">
                 <span class="card-img-label">Strategy</span>
                 <img src="{{ URL }}/assets/img/@sample1.jpg" alt="">
@@ -104,8 +104,8 @@
               <span class="card-state">Application development</span>
             </div>
           </li>
-          <li class="masonry-list-item is-two" data-aos="scale-up" data-aos-duration="1000" data-groups='["strategy"]'>
-            <div class="card">
+          <li class="masonry-list-item is-two" data-groups='["strategy"]'>
+            <div class="card" data-aos="scale-up">
               <div class="card-img">
                 <span class="card-img-label">Strategy</span>
                 <img src="{{ URL }}/assets/img/@sample1.jpg" alt="">
@@ -115,8 +115,8 @@
               <span class="card-state">Application development</span>
             </div>
           </li>
-          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000" data-groups='["digital-experience"]'>
-            <div class="card">
+          <li class="masonry-list-item" data-groups='["digital-experience"]'>
+            <div class="card" data-aos="scale-up">
               <div class="card-img">
                 <span class="card-img-label">Digital Experience</span>
               </div>
@@ -125,8 +125,8 @@
               <span class="card-state">in Progress</span>
             </div>
           </li>
-          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000" data-groups='["strategy"]'>
-            <div class="card">
+          <li class="masonry-list-item" data-groups='["strategy"]'>
+            <div class="card" data-aos="scale-up">
               <div class="card-img">
                 <span class="card-img-label">Strategy</span>
               </div>
@@ -135,8 +135,8 @@
               <span class="card-state">in Progress</span>
             </div>
           </li>
-          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000" data-groups='["digital-experience"]'>
-            <div class="card">
+          <li class="masonry-list-item" data-groups='["digital-experience"]'>
+            <div class="card" data-aos="scale-up">
               <div class="card-img">
                 <span class="card-img-label">Digital Experience</span>
               </div>
@@ -145,8 +145,8 @@
               <span class="card-state">in Progress</span>
             </div>
           </li>
-          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000" data-groups='["engineering"]'>
-            <div class="card">
+          <li class="masonry-list-item" data-groups='["engineering"]'>
+            <div class="card" data-aos="scale-up">
               <div class="card-img">
                 <span class="card-img-label">Engineering</span>
               </div>
@@ -155,8 +155,8 @@
               <span class="card-state">in Progress</span>
             </div>
           </li>
-          <li class="masonry-list-item" data-aos="scale-up" data-aos-duration="1000" data-groups='["consulting"]'>
-            <div class="card">
+          <li class="masonry-list-item" data-groups='["consulting"]'>
+            <div class="card" data-aos="scale-up">
               <div class="card-img">
                 <span class="card-img-label">Consulting</span>
               </div>
