수정사항 대응

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,7 +22,7 @@
       <strong class="logo"><img src="{{ URL }}/assets/img/logo_white.png" alt="203Labs"></strong>
       <ul>
         <li><a href="#section-01" class="js-scroll" data-offset="-30">203labs</a></li>
-        <li><a href="#section-01" class="js-scroll" data-offset="-30">who we are</a></li>
+        <li><a href="#section-01" class="js-scroll" data-offset="-30">Who we are</a></li>
         <li><a href="#section-02" class="js-scroll" data-offset="-30">What we do</a></li>
         <li><a href="#section-03" class="js-scroll" data-offset="-30">Work</a></li>
         <li><a href="#section-04" class="js-scroll" data-offset="-30">Contact</a></li>
